// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderMenu > render > Should render with moderated channels menu 1`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown"
        id="dropdown-moderated-channels"
        variant="link"
      >
        <button
          aria-expanded="false"
          class="text-decoration-none text-white px-0 dropdown-toggle btn btn-link btn-sm"
          id="dropdown-moderated-channels-toggle"
          type="button"
        >
          <span
            class="fw-semibold navbar-brand"
          >
            <img
              alt="TwitchUser"
              class="rounded-circle navbar-pfp-img proxy-profile-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
            <img
              alt="TwitchStreamer"
              class="rounded-circle navbar-pfp-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
             
            TwitchStreamer
          </span>
        </button>
      </div>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        aria-labelledby="navbar-options-menu-label"
        class="raleway-font offcanvas offcanvas-end"
        id="navbar-options-menu"
      >
        <div
          class="offcanvas-header"
        >
          <div
            class="fw-bold fs-4 offcanvas-title h5"
            id="navbar-options-menu-label"
          >
            Options
          </div>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="fw-medium offcanvas-body"
        >
          <div
            class="justify-content-end flex-grow-1 pe-3 fs-5 navbar-nav"
          >
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              Logout
            </a>
            <hr
              class="border-bottom my-2"
            />
            <a
              class="settings-menu nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              Settings
            </a>
            <div
              class="accordion-dark accordion accordion-flush collapse"
              id="settings-menu"
            >
              <div
                class="accordion-body"
              >
                <button
                  class="btn settings-menu btn btn-link"
                  id="enable-room-code"
                  title="Allows host to set a room code that can be whispered to players."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Enable Room Code
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Replaces the !join command with a custom term to use to join the Interested queue."
                  type="button"
                >
                  <span
                    for="custom-join-command"
                  >
                    Use Custom Join Command: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-join-command"
                    name="custom-join-command"
                    placeholder="e.g. !join"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Messages users in chat when they've successfully joined the Interested queue."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Show Join Confirmation Message
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Replaces the !leave command with a custom term to use to leave all of the queues."
                  type="button"
                >
                  <span
                    for="custom-leave-command"
                  >
                    Use Custom Leave Command: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-leave-command"
                    name="custom-leave-command"
                    placeholder="e.g. !leave"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Messages users in chat when they've successfully left the queues."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Show Leave Confirmation Message
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Uses a custom character or emote to separate requests listed in the chat."
                  type="button"
                >
                  <span
                    for="custom-delimiter"
                  >
                    Use Custom Delimiter: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-delimiter"
                    name="custom-delimiter"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <hr
                  class="border-bottom my-2"
                />
                <h5>
                  Beta Options
                </h5>
                <div
                  class="smaller"
                >
                  These options have not been fully tested and may not work as intended.
                </div>
                <button
                  class="btn settings-menu btn btn-link"
                  id="enable-moderated-channels-option"
                  title="Allows user to use this app on another channel that grants them moderation access."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Enable Moderated Channels Menu
                  </span>
                </button>
              </div>
            </div>
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              View Chat Commands
            </a>
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              What's New
            </a>
            <div
              class="position-absolute bottom-0 start-0 end-0 pb-3 text-center"
              id="options-debug-menu-items"
            >
              <a
                class="nav-link"
                href="#"
                role="button"
                tabindex="0"
                title="Wanna support the development of Code Whisperer? Donations are never expected but are always appreciated!"
              >
                <img
                  alt="Support Me on Ko-fi"
                  src="https://ko-fi.com/img/githubbutton_sm.svg"
                />
              </a>
              <div
                class="dropup-center dropup"
                id="dropdown-debug-menu-items"
                variant="link"
              >
                <button
                  aria-expanded="false"
                  class="text-decoration-none dropdown-toggle btn btn-link btn-sm"
                  id="dropdown-debug-menu-items-toggle"
                  type="button"
                >
                  version 0.0.0
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > render > Should render with moderated channels menu 2`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown"
        id="dropdown-moderated-channels"
        variant="link"
      >
        <button
          aria-expanded="false"
          class="text-decoration-none text-white px-0 dropdown-toggle btn btn-link btn-sm"
          id="dropdown-moderated-channels-toggle"
          type="button"
        >
          <span
            class="fw-semibold navbar-brand"
          >
            <img
              alt="TwitchUser"
              class="rounded-circle navbar-pfp-img proxy-profile-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
            <img
              alt="TwitchStreamer"
              class="rounded-circle navbar-pfp-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
             
            TwitchStreamer
          </span>
        </button>
      </div>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler"
        data-margin-right=""
        style=""
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > render > Should render with moderated channels menu 3`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <div
        class="dropdown"
        id="dropdown-moderated-channels"
        variant="link"
      >
        <button
          aria-expanded="false"
          class="text-decoration-none text-white px-0 dropdown-toggle btn btn-link btn-sm"
          id="dropdown-moderated-channels-toggle"
          type="button"
        >
          <span
            class="fw-semibold navbar-brand"
          >
            <img
              alt="TwitchUser"
              class="rounded-circle navbar-pfp-img proxy-profile-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
            <img
              alt="TwitchStreamer"
              class="rounded-circle navbar-pfp-img"
              src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
            />
             
            TwitchStreamer
          </span>
        </button>
      </div>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler"
        data-margin-right=""
        style=""
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > render > Should render without error 1`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <span
        class="fw-semibold navbar-brand"
      >
        <img
          alt="TwitchUser"
          class="rounded-circle navbar-pfp-img proxy-profile-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
        <img
          alt="TwitchStreamer"
          class="rounded-circle navbar-pfp-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
         
        TwitchStreamer
      </span>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        aria-labelledby="navbar-options-menu-label"
        class="raleway-font offcanvas offcanvas-end"
        id="navbar-options-menu"
      >
        <div
          class="offcanvas-header"
        >
          <div
            class="fw-bold fs-4 offcanvas-title h5"
            id="navbar-options-menu-label"
          >
            Options
          </div>
          <button
            aria-label="Close"
            class="btn-close"
            type="button"
          />
        </div>
        <div
          class="fw-medium offcanvas-body"
        >
          <div
            class="justify-content-end flex-grow-1 pe-3 fs-5 navbar-nav"
          >
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              Logout
            </a>
            <hr
              class="border-bottom my-2"
            />
            <a
              class="settings-menu nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              Settings
            </a>
            <div
              class="accordion-dark accordion accordion-flush collapse"
              id="settings-menu"
            >
              <div
                class="accordion-body"
              >
                <button
                  class="btn settings-menu btn btn-link"
                  id="enable-room-code"
                  title="Allows host to set a room code that can be whispered to players."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Enable Room Code
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Replaces the !join command with a custom term to use to join the Interested queue."
                  type="button"
                >
                  <span
                    for="custom-join-command"
                  >
                    Use Custom Join Command: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-join-command"
                    name="custom-join-command"
                    placeholder="e.g. !join"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Messages users in chat when they've successfully joined the Interested queue."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Show Join Confirmation Message
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Replaces the !leave command with a custom term to use to leave all of the queues."
                  type="button"
                >
                  <span
                    for="custom-leave-command"
                  >
                    Use Custom Leave Command: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-leave-command"
                    name="custom-leave-command"
                    placeholder="e.g. !leave"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Messages users in chat when they've successfully left the queues."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Show Leave Confirmation Message
                  </span>
                </button>
                <button
                  class="btn settings-menu btn btn-link"
                  title="Uses a custom character or emote to separate requests listed in the chat."
                  type="button"
                >
                  <span
                    for="custom-delimiter"
                  >
                    Use Custom Delimiter: 
                  </span>
                  <input
                    class="form-control"
                    id="custom-delimiter"
                    name="custom-delimiter"
                    spellcheck="false"
                    type="text"
                    value=""
                  />
                </button>
                <hr
                  class="border-bottom my-2"
                />
                <h5>
                  Beta Options
                </h5>
                <div
                  class="smaller"
                >
                  These options have not been fully tested and may not work as intended.
                </div>
                <button
                  class="btn settings-menu btn btn-link"
                  id="enable-moderated-channels-option"
                  title="Allows user to use this app on another channel that grants them moderation access."
                  type="button"
                >
                  <input
                    readonly=""
                    role="switch"
                    type="checkbox"
                  />
                   
                  <span>
                    Enable Moderated Channels Menu
                  </span>
                </button>
              </div>
            </div>
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              View Chat Commands
            </a>
            <a
              class="nav-link"
              href="#"
              role="button"
              tabindex="0"
            >
              What's New
            </a>
            <div
              class="position-absolute bottom-0 start-0 end-0 pb-3 text-center"
              id="options-debug-menu-items"
            >
              <a
                class="nav-link"
                href="#"
                role="button"
                tabindex="0"
                title="Wanna support the development of Code Whisperer? Donations are never expected but are always appreciated!"
              >
                <img
                  alt="Support Me on Ko-fi"
                  src="https://ko-fi.com/img/githubbutton_sm.svg"
                />
              </a>
              <div
                class="dropup-center dropup"
                id="dropdown-debug-menu-items"
                variant="link"
              >
                <button
                  aria-expanded="false"
                  class="text-decoration-none dropdown-toggle btn btn-link btn-sm"
                  id="dropdown-debug-menu-items-toggle"
                  type="button"
                >
                  version 0.0.0
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > render > Should render without error 2`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <span
        class="fw-semibold navbar-brand"
      >
        <img
          alt="TwitchUser"
          class="rounded-circle navbar-pfp-img proxy-profile-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
        <img
          alt="TwitchStreamer"
          class="rounded-circle navbar-pfp-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
         
        TwitchStreamer
      </span>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler"
        data-margin-right=""
        style=""
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > render > Should render without error 3`] = `
<div>
  <nav
    class="bg-body-tertiary mb-3 py-0 raleway-font navbar navbar-light"
    data-bs-theme="dark"
  >
    <div
      class="container-fluid"
    >
      <span
        class="fw-semibold navbar-brand"
      >
        <img
          alt="TwitchUser"
          class="rounded-circle navbar-pfp-img proxy-profile-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
        <img
          alt="TwitchStreamer"
          class="rounded-circle navbar-pfp-img"
          src="https://static-cdn.jtvnw.net/jtv_user_pictures/profile_image-300x300.png"
        />
         
        TwitchStreamer
      </span>
      <button
        aria-controls="navbar-options-menu"
        aria-label="Toggle navigation"
        class="border-0 rounded-0 navbar-toggler"
        data-margin-right=""
        style=""
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`HeaderMenu > toggleOption > should call onSettingUpdate with the specified option 1`] = `
[
  [
    {
      "enableTestOption1": false,
    },
  ],
  [
    {
      "enableTestOption2": true,
    },
  ],
  [
    {
      "enableTestOption3": false,
    },
  ],
]
`;

exports[`HeaderMenu > updateInputOption > should call onSettingUpdate with the specified option and event 1`] = `
[
  [
    {
      "enableTestOption1": "Testing",
    },
  ],
  [
    {
      "enableTestOption2": null,
    },
  ],
]
`;
